--- a/app/views/admin_users/passwords/new.html.erb
+++ b/app/views/admin_users/passwords/new.html.erb
@@ -1,16 +1,16 @@
-<h2>Forgot your password?</h2>
+<%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="text-center">
+  <h1 class="h4 text-gray-900 mb-2">Forgot Your Password?</h1>
+  <p class="mb-4">We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your password!</p>
+</div>
+<%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, class: "user" do |f| %>
+  <div class="form-group">
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-user", placeholder: "Enter Email Address..." %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+  <%= f.submit "Send me reset password instructions", class: "btn btn-primary btn-user btn-block" %>
 <% end %>
+
+<hr>
 
 <%= render "admin_users/shared/links" %>
