feat: cms::posts#new page

--- a/app/views/cms/posts/index.html.erb
+++ b/app/views/cms/posts/index.html.erb
@@ -17,7 +17,13 @@
   <!-- DataTales Example -->
   <div class="card shadow mb-4">
     <div class="card-header py-3">
-      <h6 class="m-0 font-weight-bold text-primary">Total: <%= @cms_posts.count %></h6>
+      <h6 class="m-0 font-weight-bold text-primary">Total: <%= @cms_posts.count %>
+        <div class="float-right">
+          <%= link_to new_cms_post_path do %>
+            <i class="fas fa-fw fa-plus"></i>
+          <% end %>
+        </div>
+      </h6>
     </div>
     <div class="card-body">
       <div class="table-responsive">
