--- a/app/views/cms/posts/new.html.erb
+++ b/app/views/cms/posts/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Cms Post</h1>
-
-<%= render 'form', cms_post: @cms_post %>
-
-<%= link_to 'Back', cms_posts_path %>
+<div class="col-xl-12">
+  <div class="card shadow mb-4">
+    <!-- Card Header -->
+    <div class="card-header py-3">
+      <h6 class="m-0 font-weight-bold text-primary">New Post</h6>
+    </div>
+    <!-- Card Body -->
+    <div class="card-body">
+      <%= render 'form', cms_post: @cms_post %>
+    </div>
+  </div>
+</div>
