feat: integrate datatables using webpacker instead of vendor files

--- a/app/views/cms/posts/index.html.erb
+++ b/app/views/cms/posts/index.html.erb
@@ -27,7 +27,7 @@
     </div>
     <div class="card-body">
       <div class="table-responsive">
-        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+        <table class="table table-bordered dataTable" width="100%" cellspacing="0">
           <thead>
             <tr>
               <th>ID</th>
@@ -71,3 +71,7 @@
 
 </div>
 <!-- End of Page Content -->
+
+<% content_for :javascript do %>
+  <%= javascript_pack_tag 'custom/datatables-demo', 'data-turbolinks-track': 'reload' %>
+<% end %>
