feat: admin users update password pages

--- a/app/views/cms/application/index.html.slim
+++ b/app/views/cms/application/index.html.slim
@@ -1,4 +1,5 @@
 .container-fluid
+  = render 'layouts/flash'
   /! Page Heading
   .d-sm-flex.align-items-center.justify-content-between.mb-4
     h1.h3.mb-0.text-gray-800 Dashboard
