--- a/app/views/cms/posts/index.html.slim
+++ b/app/views/cms/posts/index.html.slim
@@ -1,10 +1,6 @@
 /! Begin Page Content
 .container-fluid
-  - flash.each do |key, value|
-    = content_tag :div, value, class: "alert alert-dismissible #{flash_class key}"  do
-      = value
-      button.close aria-label="Close" data-dismiss="alert" type="button" 
-        span aria-hidden="true"  ×
+  = render 'layouts/flash'
   /! Page Heading
   h1.h3.mb-2.text-gray-800 Posts
   p.mb-4
