--- a/app/views/cms/posts/_form.html.slim
+++ b/app/views/cms/posts/_form.html.slim
@@ -13,5 +13,10 @@
     = form.text_field :publish_date, placeholder: 'Publish Date', data: { behavior: 'flatpickr' }, class: 'form-control'
   .form-group
     = form.cktext_area :content, placeholder: 'Write something'
+  .form-group
+    img.image-input-preview src="#{form.object.cover_image.attachment ? rails_blob_url(form.object.cover_image) : '#'}" alt=''
+    = form.file_field :cover_image, class: 'image-input form-control-file', hidden: ''
+    = form.label :cover_image, 'Browse', class: 'btn btn-secondary'
+
   .actions
     = form.submit class: 'btn btn-primary'
