style: add labels to posts form

--- a/app/views/cms/posts/_form.html.slim
+++ b/app/views/cms/posts/_form.html.slim
@@ -8,15 +8,22 @@
         - cms_post.errors.full_messages.each do |message|
           li= message
   .form-group
+    - unless cms_post.new_record?
+      = form.label :title, class: 'small font-weight-bold'
     = form.text_field :title, placeholder: 'Title', class: 'form-control'
   .form-group
+    - unless cms_post.new_record?
+      = form.label :publish_date, class: 'small font-weight-bold'
     = form.text_field :publish_date, placeholder: 'Publish Date', data: { behavior: 'flatpickr' }, class: 'form-control'
   .form-group
+    - unless cms_post.new_record?
+      = form.label :content, class: 'small font-weight-bold'
     = form.cktext_area :content, placeholder: 'Write something'
   .form-group
+    = form.label :cover_image, class: 'small font-weight-bold'
     img.image-input-preview src="#{form.object.cover_image.attachment ? rails_blob_url(form.object.cover_image) : '#'}" alt=''
     = form.file_field :cover_image, class: 'image-input form-control-file', hidden: ''
-    = form.label :cover_image, 'Browse', class: 'btn btn-secondary'
+    = form.label :cover_image, 'Browse Image', class: 'btn btn-secondary'
 
   .actions
     = form.submit class: 'btn btn-primary'
