--- a/app/views/layouts/cms.html.slim
+++ b/app/views/layouts/cms.html.slim
@@ -13,8 +13,8 @@ html lang="en"
     /! Custom fonts for this template
     link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" /
     /! Custom styles for this template
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' # after stylesheet_pack_tag
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag Ckeditor.cdn_url
   body#page-top
