style: tweak to trigger required: true html validation on file field

--- a/app/javascript/packs/scss/fields.sass
+++ b/app/javascript/packs/scss/fields.sass
@@ -1,6 +1,11 @@
 img.image-input-preview
   display: block
-  margin-bottom: 8px
   width: 200px
 label
   cursor: pointer
+
+// to trigger required: true html validation
+input.image-input
+  height: 1px
+  opacity: 0
+  margin-bottom: 8px
