feat: remove image preview

--- a/app/javascript/packs/scss/fields.sass
+++ b/app/javascript/packs/scss/fields.sass
@@ -1,6 +1,8 @@
 img.image-input-preview
   display: block
-  width: 200px
+  width: 100%
+  min-height: 200px
+  background-color: #ddd
 label
   cursor: pointer
 
@@ -9,3 +11,5 @@ input.image-input
   height: 1px
   opacity: 0
   margin-bottom: 8px
+.image-delete
+  cursor: pointer
