refactor: rearrange stylesheets to use webpacker packs instead of  asset pipeline

--- a/app/views/cms/posts/index.html.slim
+++ b/app/views/cms/posts/index.html.slim
@@ -47,4 +47,4 @@
                     i.fas.fa-fw.fa-trash-alt
 /! End of Page Content
 - content_for :javascript_in_head do
-  = javascript_pack_tag 'custom/datatables', 'data-turbolinks-track': 'reload'
+  = javascript_pack_tag 'datatables', 'data-turbolinks-track': 'reload'
