--- a/app/views/cms/application/index.html.slim
+++ b/app/views/cms/application/index.html.slim
@@ -189,5 +189,5 @@
           p SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce CSS bloat and poor page performance. Custom CSS classes are used to create custom components and custom utility classes.
           p.mb-0 Before working with this theme, you should become familiar with the Bootstrap framework, especially the utility classes.
 - content_for :javascript do
-  = javascript_pack_tag 'custom/chart-area-demo'
-  = javascript_pack_tag 'custom/chart-pie-demo'
+  = javascript_pack_tag 'chart-area-demo'
+  = javascript_pack_tag 'chart-pie-demo'
