fix: do not use random function or else it will generate css files with indeterminate hash

--- a/app/javascript/scss/sb-admin-2/_error.scss
+++ b/app/javascript/scss/sb-admin-2/_error.scss
@@ -13,7 +13,7 @@
   $steps: 20;
   @for $i from 0 through $steps {
     #{percentage($i*(1/$steps))} {
-      clip: rect(random(100)+px,9999px,random(100)+px,0);
+      clip: rect(($steps*$i)+px,9999px,($steps*$i)+px,0);
     }
   }
 }
@@ -34,7 +34,7 @@
   $steps: 20;
   @for $i from 0 through $steps {
     #{percentage($i*(1/$steps))} {
-      clip: rect(random(100)+px,9999px,random(100)+px,0);
+      clip: rect(($steps*$i)+px,9999px,($steps*$i)+px,0);
     }
   }
 }
