fix: change dataTable element class name to prevent the class name from being removed on dataTable destroy (https://www.vic-l.com/how-to-add-datatables-to-webpacker-in-rails/)

--- a/app/views/cms/posts/index.html.slim
+++ b/app/views/cms/posts/index.html.slim
@@ -16,7 +16,7 @@
             i.fas.fa-fw.fa-plus
     .card-body
       .table-responsive
-        table.table.table-bordered.dataTable cellspacing="0" width="100%" 
+        table.table.table-bordered.data-table width="100%" 
           thead
             tr
               th ID
