--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -1,7 +1,7 @@
 /! Sidebar
 ul#accordionSidebar.navbar-nav.bg-gradient-primary.sidebar.sidebar-dark.accordion
   /! Sidebar - Brand
-  a.sidebar-brand.d-flex.align-items-center.justify-content-center href="index.html" 
+  = link_to edit_admin_user_registration_path, class: 'sidebar-brand d-flex align-items-center justify-content-center' do
     .sidebar-brand-icon.rotate-n-15
       i.fas.fa-laugh-wink
     .sidebar-brand-text.mx-3
