test: first feature test using chrome driver

--- a/app/views/admin_users/mailer/reset_password_instructions.html.erb
+++ b/app/views/admin_users/mailer/reset_password_instructions.html.erb
@@ -190,7 +190,7 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                       <tr>
                         <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                          <%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token), target: '_blank', style: "display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;" %>
+                          <%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token), target: '_blank', style: "display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;", id: 'reset-password-token' %>
                         </td>
                       </tr>
                     </table>
