--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -1,19 +1,19 @@
 doctype html
 html lang="en" 
   head
-    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
+    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type"
     = csrf_meta_tags
     = csp_meta_tag
-    meta charset="utf-8" /
-    meta content="IE=edge" http-equiv="X-UA-Compatible" /
-    meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /
-    meta content="" name="description" /
-    meta content="" name="author" /
+    meta charset="utf-8"
+    meta content="IE=edge" http-equiv="X-UA-Compatible"
+    meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"
+    meta content="" name="description"
+    meta content="" name="author"
     title SB Admin 2 - Login
     /! Custom fonts for this template
-    link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" /
-    = stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload'
-    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"
+    = stylesheet_pack_tag 'devise', 'data-turbolinks-track': 'reload'
+    = javascript_pack_tag 'devise', 'data-turbolinks-track': 'reload'
   body.bg-gradient-primary
     .container
       /! Outer Row
