feat: split footer into partial

--- a/app/views/layouts/cms.html.slim
+++ b/app/views/layouts/cms.html.slim
@@ -33,7 +33,7 @@ html lang="en"
           /! End of Page Content
         /! End of Main Content
         /! Footer
-        = render 'layouts/footer'
+        = render 'layouts/cms_footer'
         /! End of Footer
       /! End of Content Wrapper
     /! End of Page Wrapper
