--- a/app/javascript/scss/web/vendor.sass
+++ b/app/javascript/scss/web/vendor.sass
@@ -432,7 +432,7 @@ h1, h2, h3, h4, h5, h6
     background: #101522
     padding: 0 0 25px 0
     color: #eee
-    font-size: 14px
+    font-size: $font-size-normal
 #about
   &:before
     content: ""
