style: $font-size-normal variable

--- a/app/javascript/scss/web/vendor.sass
+++ b/app/javascript/scss/web/vendor.sass
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6
     color: rgba(202, 206, 221, 0.8)
     font-family: "Raleway", sans-serif
     font-weight: 600
-    font-size: 14px
+    font-size: $font-size-normal
     outline: none
 .nav-menu li:hover > ul,
 .nav-menu li.sfHover > ul
@@ -406,7 +406,7 @@ h1, h2, h3, h4, h5, h6
   .about-btn
     font-family: "Raleway", sans-serif
     font-weight: 500
-    font-size: 14px
+    font-size: $font-size-normal
     letter-spacing: 1px
     display: inline-block
     padding: 12px 32px
@@ -454,7 +454,7 @@ h1, h2, h3, h4, h5, h6
     margin-bottom: 10px
     color: #fff
   p
-    font-size: 14px
+    font-size: $font-size-normal
     margin-bottom: 20px
     color: #fff
 #speakers
@@ -760,7 +760,7 @@ h1, h2, h3, h4, h5, h6
     margin: 0
     padding: 9px 20px
     border-radius: 50px
-    font-size: 14px
+    font-size: $font-size-normal
   button
     border: 0
     padding: 9px 25px
@@ -769,7 +769,7 @@ h1, h2, h3, h4, h5, h6
     color: #fff
     transition: all 0.3s ease
     outline: none
-    font-size: 14px
+    font-size: $font-size-normal
     border-radius: 50px
     &:hover
       background: #e0072f
@@ -788,7 +788,7 @@ h1, h2, h3, h4, h5, h6
       margin: 25px 0
     .card-title
       margin: 10px 0
-      font-size: 14px
+      font-size: $font-size-normal
       letter-spacing: 1px
       font-weight: bold
     .card-price
@@ -901,7 +901,7 @@ h1, h2, h3, h4, h5, h6
 #contact form input, #contact form textarea
   border-radius: 0
   box-shadow: none
-  font-size: 14px
+  font-size: $font-size-normal
 #contact form input::focus, #contact form textarea::focus
   background-color: $color-primary
 #footer
@@ -922,7 +922,7 @@ h1, h2, h3, h4, h5, h6
         height: 40px
         margin-bottom: 10px
       p
-        font-size: 14px
+        font-size: $font-size-normal
         line-height: 24px
         margin-bottom: 0
         font-family: "Raleway", sans-serif
@@ -945,7 +945,7 @@ h1, h2, h3, h4, h5, h6
           background: $color-primary
           color: #fff
     h4
-      font-size: 14px
+      font-size: $font-size-normal
       font-weight: bold
       color: #fff
       text-transform: uppercase
