style: change a:hover color to use variable

--- a/app/javascript/scss/web/vendor.sass
+++ b/app/javascript/scss/web/vendor.sass
@@ -14,7 +14,7 @@ a
   color: $color-primary
   transition: 0.5s
 a:hover, a:active, a:focus
-  color: #f8234a
+  color: $color-primary
   outline: none
   text-decoration: none
 p
