fix: use admin@mailinator.com for fast testing of smtp email sending

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -55,7 +55,7 @@ footer#footer
             | +1 425 445 8051
             br/
             strong Email:
-            | admin@test.com
+            | admin@mailinator.com
             br/
           .social-links
             a.twitter href="#" 
