--- a/app/views/application/homepage.html.slim
+++ b/app/views/application/homepage.html.slim
@@ -688,7 +688,7 @@ main#main
             i.ion-ios-email-outline
             h3 Email
             p
-              a href="mailto:admin@test.com" admin@test.com
+              a href="mailto:admin@mailinator.com" admin@mailinator.com
       .form
         form action="forms/contact.php" method="post" role="form" 
           .form-row
