--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -81,7 +81,7 @@ ul#accordionSidebar.navbar-nav.bg-gradient-primary.sidebar.sidebar-dark.accordio
       i.fas.fa-fw.fa-lock
       span Password
   li.nav-item
-    a.dropdown-item.nav-link data-target="#logoutModal" data-toggle="modal" href="#" 
+    a.nav-link data-target="#logoutModal" data-toggle="modal" href="#" 
       i.fas.fa-sign-out-alt
       span Logout
   /! Divider
