fix: syntax error in converting erb to slim

--- a/app/views/cms/application/index.html.slim
+++ b/app/views/cms/application/index.html.slim
@@ -40,7 +40,7 @@
                   .h5.mb-0.mr-3.font-weight-bold.text-gray-800 50%
                 .col
                   .progress.progress-sm.mr-2
-                    .progress-bar.bg-info aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" role="progressbar" style=("width: 50%") 
+                    .progress-bar.bg-info aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" role="progressbar" style="width: 50%" 
             .col-auto
               i.fas.fa-clipboard-list.fa-2x.text-gray-300
     /! Pending Requests Card Example
@@ -116,27 +116,27 @@
             | Server Migration
             span.float-right 20%
           .progress.mb-4
-            .progress-bar.bg-danger aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" role="progressbar" style=("width: 20%") 
+            .progress-bar.bg-danger aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" role="progressbar" style="width: 20%" 
           h4.small.font-weight-bold
             | Sales Tracking
             span.float-right 40%
           .progress.mb-4
-            .progress-bar.bg-warning aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" role="progressbar" style=("width: 40%") 
+            .progress-bar.bg-warning aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" role="progressbar" style="width: 40%" 
           h4.small.font-weight-bold
             | Customer Database
             span.float-right 60%
           .progress.mb-4
-            .progress-bar aria-valuemax="100" aria-valuemin="0" aria-valuenow="60" role="progressbar" style=("width: 60%") 
+            .progress-bar aria-valuemax="100" aria-valuemin="0" aria-valuenow="60" role="progressbar" style="width: 60%" 
           h4.small.font-weight-bold
             | Payout Details
             span.float-right 80%
           .progress.mb-4
-            .progress-bar.bg-info aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" role="progressbar" style=("width: 80%") 
+            .progress-bar.bg-info aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" role="progressbar" style="width: 80%" 
           h4.small.font-weight-bold
             | Account Setup
             span.float-right Complete!
           .progress
-            .progress-bar.bg-success aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" role="progressbar" style=("width: 100%") 
+            .progress-bar.bg-success aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" role="progressbar" style="width: 100%" 
       /! Color System
       .row
         .col-lg-6.mb-4
