--- a/app/views/users/mailer/reset_password_instructions.html.slim
+++ b/app/views/users/mailer/reset_password_instructions.html.slim
@@ -1,6 +1,6 @@
-body style=("background-color: #e9ecef;") 
+body style="background-color: #e9ecef;" 
   /! start preheader
-  .preheader style=("display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;") 
+  .preheader style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;" 
     | A preheader is the short summary text that follows the subject line when an email is viewed in the inbox.
   /! end preheader
   /! start body
@@ -12,9 +12,9 @@ body style=("background-color: #e9ecef;")
           | <table align="center" border="0" cellpadding="0" cellspacing="0" width="600"
           | <tr
           | <td align="center" valign="top" width="600"
-        table border="0" cellpadding="0" cellspacing="0" style=("max-width: 600px;") width="100%" 
+        table border="0" cellpadding="0" cellspacing="0" style="max-width: 600px;" width="100%" 
           tr
-            td align="center" style=("padding: 36px 24px;") valign="top" 
+            td align="center" style="padding: 36px 24px;" valign="top" 
               = link_to root_url, target: "_blank", style: "display: inline-block;" do
                 = image_pack_tag 'logo.jpg', alt: 'Logo', border: "0", width: "48", style: "display: block; width: 48px; max-width: 48px; min-width: 48px;"
         /![if (gte mso 9)|(IE)]
@@ -29,10 +29,10 @@ body style=("background-color: #e9ecef;")
           | <table align="center" border="0" cellpadding="0" cellspacing="0" width="600"
           | <tr
           | <td align="center" valign="top" width="600"
-        table border="0" cellpadding="0" cellspacing="0" style=("max-width: 600px;") width="100%" 
+        table border="0" cellpadding="0" cellspacing="0" style="max-width: 600px;" width="100%" 
           tr
-            td align="left" bgcolor="#ffffff" style=("padding: 36px 24px 0; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;" 
-              h1 style=("margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;")  Reset Your Password
+            td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;" 
+              h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;"  Reset Your Password
         /![if (gte mso 9)|(IE)]
           | </td
           | </tr
@@ -45,27 +45,27 @@ body style=("background-color: #e9ecef;")
           | <table align="center" border="0" cellpadding="0" cellspacing="0" width="600"
           | <tr
           | <td align="center" valign="top" width="600"
-        table border="0" cellpadding="0" cellspacing="0" style=("max-width: 600px;") width="100%" 
+        table border="0" cellpadding="0" cellspacing="0" style="max-width: 600px;" width="100%" 
           /! start copy
           tr
-            td align="left" bgcolor="#ffffff" style=("padding: 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;" 
-              p style=("margin: 0;")  Tap the button below to reset your customer account password. If you didn't request a new password, you can safely delete this email.
+            td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;" 
+              p style="margin: 0;"  Tap the button below to reset your customer account password. If you didn't request a new password, you can safely delete this email.
           /! end copy
           /! start button
           tr
             td align="left" bgcolor="#ffffff" 
               table border="0" cellpadding="0" cellspacing="0" width="100%" 
                 tr
-                  td align="center" bgcolor="#ffffff" style=("padding: 12px;") 
+                  td align="center" bgcolor="#ffffff" style="padding: 12px;" 
                     table border="0" cellpadding="0" cellspacing="0" 
                       tr
-                        td align="center" bgcolor="#1a82e2" style=("border-radius: 6px;") 
-                          p#reset-password-token style=("margin: 0;display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 24px; color: #ffffff; text-decoration: none; border-radius: 6px;" = @token
+                        td align="center" bgcolor="#1a82e2" style="border-radius: 6px;" 
+                          p#reset-password-token style="margin: 0;display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 24px; color: #ffffff; text-decoration: none; border-radius: 6px;" = @token
           /! end button
           /! start copy
           tr
-            td align="left" bgcolor="#ffffff" style=("padding: 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf" 
-              p style=("margin: 0;") 
+            td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf" 
+              p style="margin: 0;" 
                 | Cheers,
                 br>/
                 | The rails6boilerplate Team
@@ -77,22 +77,22 @@ body style=("background-color: #e9ecef;")
     /! end copy block
     /! start footer
     tr
-      td align="center" bgcolor="#e9ecef" style=("padding: 24px;") 
+      td align="center" bgcolor="#e9ecef" style="padding: 24px;" 
         /![if (gte mso 9)|(IE)]
           | <table align="center" border="0" cellpadding="0" cellspacing="0" width="600"
           | <tr
           | <td align="center" valign="top" width="600"
-        table border="0" cellpadding="0" cellspacing="0" style=("max-width: 600px;") width="100%" 
+        table border="0" cellpadding="0" cellspacing="0" style="max-width: 600px;" width="100%" 
           /! start permission
           tr
-            td align="center" bgcolor="#e9ecef" style=("padding: 12px 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;" 
-              p style=("margin: 0;")  You received this email because we received a request for new password for your account. If you didn't request new password you can safely delete this email.
+            td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;" 
+              p style="margin: 0;"  You received this email because we received a request for new password for your account. If you didn't request new password you can safely delete this email.
           /! end permission
           /! start unsubscribe
           tr
-            td align="center" bgcolor="#e9ecef" style=("padding: 12px 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;" 
+            td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;" 
               /! <p style="margin: 0;">To stop receiving these emails, you can <a href="https://sendgrid.com" target="_blank">unsubscribe</a> at any time.</p
-              p style=("margin: 0;") 
+              p style="margin: 0;" 
                 | rails6boilerplate © #{Date.today.year}
           /! end unsubscribe
         /![if (gte mso 9)|(IE)]
