--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,9 +11,7 @@ html lang="en"
     meta content="" name="author"
     title Rails6boilerplate
 
-    /! Favicons
-    / link href="assets/img/favicon.png" rel="icon"
-    / link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"
+    = favicon_pack_tag 'logo.jpg'
 
     /! Custom fonts for this template
     link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"
