style: use color-secondary variable

--- a/app/javascript/scss/web/vendor.sass
+++ b/app/javascript/scss/web/vendor.sass
@@ -55,11 +55,11 @@ h1, h2, h3, h4, h5, h6
     font-size: 24px
     padding-top: 6px
   &:focus
-    background: #e0072f
+    background: $color-secondary
     color: #fff
     outline: none
   &:hover
-    background: #e0072f
+    background: $color-secondary
     color: #fff
 .section-header
   margin-bottom: 60px
@@ -772,7 +772,7 @@ h1, h2, h3, h4, h5, h6
     font-size: $font-size-normal
     border-radius: 50px
     &:hover
-      background: #e0072f
+      background: $color-secondary
 #subscribe .section-header h2, #subscribe p
   color: #fff
 #buy-tickets
@@ -808,7 +808,7 @@ h1, h2, h3, h4, h5, h6
       border: 0
       color: #fff
       &:hover
-        background-color: #e0072f
+        background-color: $color-secondary
   #buy-ticket-modal
     .btn
       font-size: 15px
@@ -819,7 +819,7 @@ h1, h2, h3, h4, h5, h6
       border: 0
       color: #fff
       &:hover
-        background-color: #e0072f
+        background-color: $color-secondary
 #buy-tickets #buy-ticket-modal input, #buy-tickets #buy-ticket-modal select
   border-radius: 0
 #contact
@@ -892,7 +892,7 @@ h1, h2, h3, h4, h5, h6
       border-radius: 50px
       cursor: pointer
     button[type="submit"]:hover
-      background: #e0072f
+      background: $color-secondary
 #contact .contact-info address, #contact .contact-info p
   margin-bottom: 0
   color: #112363
@@ -991,7 +991,7 @@ h1, h2, h3, h4, h5, h6
         transition: 0.3s
         cursor: pointer
       input[type="submit"]:hover
-        background: #e0072f
+        background: $color-secondary
   .copyright
     text-align: center
     padding-top: 30px
