--- a/app/javascript/scss/web/_variables.scss
+++ b/app/javascript/scss/web/_variables.scss
@@ -2,3 +2,4 @@ $color-primary: #DAA520 !default;
 $header-height:70px;
 $header-padding: 15px;
 $font-size-normal: 14px;
+$color-secondary: #e0072f;
