fix: change title in devise pages for admin users

--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -9,7 +9,7 @@ html lang="en"
     meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"
     meta content="" name="description"
     meta content="" name="author"
-    title SB Admin 2 - Login
+    title Rails6boilerplate - Admin
     /! Custom fonts for this template
     link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"
     = stylesheet_pack_tag 'devise', 'data-turbolinks-track': 'reload'
