--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -10,7 +10,9 @@ html lang="en"
     meta content="" name="description"
     meta content="" name="author"
     title Rails6boilerplate - Admin
-    /! Custom fonts for this template
+
+    = favicon_pack_tag 'logo.jpg'
+
     link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"
     = stylesheet_pack_tag 'devise', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'devise', 'data-turbolinks-track': 'reload'
