style: add space under cms devise pages logo

--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -23,5 +23,5 @@ html lang="en"
         .col-xl-10.col-lg-12.col-md-9
           .card.o-hidden.border-0.shadow-lg.my-5
             .card-body.p-5
-              = image_pack_tag 'logo.jpg', class: 'm-auto d-block w-25'
+              = image_pack_tag 'logo.jpg', class: 'mx-auto my-4 d-block w-25'
               = yield
