--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@ html lang="en"
     = favicon_pack_tag 'logo.jpg'
 
     /! Custom fonts for this template
-    link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"
+    link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet"
 
     /! Custom styles for this template
     = stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload'
