style: add custom css utility classes

--- a/app/javascript/scss/web/web.scss
+++ b/app/javascript/scss/web/web.scss
@@ -3,4 +3,6 @@
 @import "bootstrap/scss/bootstrap";
 @import "vendor.sass";
 
-@import "main.sass"
+@import "../utility.sass";
+
+@import "main.sass";
