--- a/app/javascript/scss/web/web.scss
+++ b/app/javascript/scss/web/web.scss
@@ -2,6 +2,8 @@
 
 @import "bootstrap/scss/bootstrap";
 @import "vendor.sass";
+@import "header-and-navigation.sass";
+@import "footer.sass";
 
 @import "../utility.sass";
 
