--- a/app/views/layouts/_topbar.html.slim
+++ b/app/views/layouts/_topbar.html.slim
@@ -100,7 +100,8 @@ nav.navbar.navbar-expand.navbar-light.bg-white.topbar.mb-4.static-top.shadow
     li.nav-item.dropdown.no-arrow
       a#userDropdown.nav-link.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button" 
         span.mr-2.d-none.d-lg-inline.text-gray-600.small Valerie Luna
-        = image_tag current_admin_user.avatar, class: 'img-profile rounded-circle'
+        / hide
+        / = image_tag current_admin_user.avatar, class: 'img-profile rounded-circle'
       /! Dropdown - User Information
       .dropdown-menu.dropdown-menu-right.shadow.animated--grow-in aria-labelledby="userDropdown" 
         a.dropdown-item href="#" 
