--- a/app/views/users/mailer/reset_password_instructions.html.slim
+++ b/app/views/users/mailer/reset_password_instructions.html.slim
@@ -49,7 +49,7 @@ body style="background-color: #e9ecef;"
           /! start copy
           tr
             td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;" 
-              p style="margin: 0;"  Tap the button below to reset your customer account password. If you didn't request a new password, you can safely delete this email.
+              p style="margin: 0;"  Below is your reset password token. If you didn't request a new password, you can safely delete this email.
           /! end copy
           /! start button
           tr
