--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -63,7 +63,7 @@ ul#accordionSidebar.navbar-nav.bg-gradient-primary.sidebar.sidebar-dark.accordio
         a.collapse-item href="blank.html"  Blank Page
   /! Nav Item - Posts
   li.nav-item
-    = link_to cms_posts_path, class: 'nav-link' do
+    = link_to cms_samples_path, class: 'nav-link' do
       i.fas.fa-fw.fa-chart-area
       span Posts
   /! Nav Item - Tables
