--- a/app/views/cms/samples/new.html.slim
+++ b/app/views/cms/samples/new.html.slim
@@ -1,8 +1,6 @@
 .col-xl-12
   .card.shadow.mb-4
-    /! Card Header
     .card-header.py-3
-      h6.m-0.font-weight-bold.text-primary New Post
-    /! Card Body
+      h6.m-0.font-weight-bold.text-primary New Sample
     .card-body
-      = render 'form', cms_post: @cms_post
+      = render 'form', sample: @sample
