--- a/app/views/cms/samples/show.html.slim
+++ b/app/views/cms/samples/show.html.slim
@@ -1,19 +1,20 @@
-.col-xl-12
-  .card.shadow.mb-4
-    /! Card Header
-    .card-header.py-3
-      h6.m-0.font-weight-bold.text-primary
-        | Post #{@cms_post.id}
-        .float-right
-          = link_to edit_cms_post_path(@cms_post) do
-            i.fas.fa-fw.fa-edit
-          = link_to cms_post_path(@cms_post), method: :delete, data: { confirm: 'Are you sure?' } do
-            i.fas.fa-fw.fa-trash-alt
-    /! Card Body
-    .card-body
-      h4.small.font-weight-bold ID
-      p= @cms_post.id
-      h4.small.font-weight-bold Title
-      p= @cms_post.title
-      h4.small.font-weight-bold Publish Date
-      p= @cms_post.publish_date.strftime('%b %d, %Y')
+.row.no-gutters
+  .col-md-12
+    .card.shadow.mb-4
+      /! Card Header
+      .card-header.py-3
+        h6.m-0.font-weight-bold.text-primary
+          | Post #{@sample.id}
+          .float-right
+            = link_to edit_cms_sample_path(@sample) do
+              i.fas.fa-fw.fa-edit
+            = link_to cms_sample_path(@sample), method: :delete, data: { confirm: 'Are you sure?' } do
+              i.fas.fa-fw.fa-trash-alt
+      /! Card Body
+      .card-body
+        h4.small.font-weight-bold ID
+        p= @sample.id
+        h4.small.font-weight-bold Title
+        p= @sample.title
+        h4.small.font-weight-bold Publish Date
+        p= @sample.publish_date.strftime('%b %d, %Y')
